# ORCA

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  cargo-deny.toml  clippy.toml  rustfmt.toml
.augment/rules/: agentic-architecture.md  code-standards.md  multi-agent-coordination.md  observability.md  performance-optimization.md  python-standards.md  roadmap-alignment.md  security-privacy.md  testing-validation.md  typescript-standards.md  vesper-integration.md  workflow.md
.cursor/rules/: agentic-architecture.mdc  code-standards.mdc  dev-log.mdc  index.mdc  rust-standards.mdc
.github/workflows/: audit-deny.yml  ci.yml
Docs/: Architecture.md  Blueprint.md  ORCA-Enhancement-Research-Directive.md  ORCA-Enhancement-Unified-Roadmap.md  Roadmap.md  TODO.md  cost_management.md  debugging.md  dev_log.md  metadata.schema.json  observability.jaeger.md  perf.md  plugin_signing_runbook.md  policy.yaml  policy_reload_design.md  rbac.policy.csv  security.mtls.md  snapshots.md
Docs/ADR/: 0001-transport.md
Docs/API/: HOWTO.md  orca_v1.proto  versioning.md
Docs/SDK/: GENERATION.md  QUICKSTART_PY.md  QUICKSTART_TS.md
Docs/schemas/: v2.md
crates/blob_store/: Cargo.toml  README.md
crates/blob_store/src/: lib.rs
crates/blob_store/tests/: blob_store_red.rs  bs2_robustness.rs  mvp_red.rs  streaming_memory.rs  streaming_red.rs
crates/budget/: Cargo.toml
crates/budget/src/: lib.rs
crates/event-log/: Cargo.toml
crates/event-log/benches/: append.rs
crates/event-log/src/: lib.rs
crates/event-log/tests/: v1_v2_compat.rs  wal_attachments_errors_red.rs  wal_v2_attachments_golden.rs  wal_v2_external_io_golden.rs  wal_v2_golden.rs
crates/event-log/tests/golden/: wal_v2_attachments_sample.jsonl  wal_v2_external_io_sample.jsonl  wal_v2_sample.jsonl
crates/orca-core/: Cargo.toml
crates/orca-core/src/: lib.rs
crates/orchestrator/: Cargo.toml  build.rs
crates/orchestrator/benches/: capture_overhead.rs  clock.rs  sha256_digest.rs  submit.rs
crates/orchestrator/src/: clock.rs  lib.rs  proxy.rs  rbac.rs  tls.rs
crates/orchestrator/tests/: attachments_integration.rs  budget_enforcement.rs  digest_sha256.rs  orchestrator_integration.rs  policy_audit_pii_redaction.rs  policy_tracing_red.rs  proxy_client_capture_red.rs  proxy_grpc_red.rs  restart_replay.rs  span_coverage.rs
crates/plugin_host/: Cargo.toml  README.md
crates/plugin_host/src/: lib.rs
crates/plugin_host/tests/: manifest_verification_properties.rs  manifest_verification_red.rs  manifest_verification_sigstore_golden.rs  runner_integration.rs
crates/plugin_host/tests/golden/sigstore/: README.md  invalid_signature.json  tampered_bundle.json  test_plugin.wasm  valid_bundle.json
crates/plugin_host/tests/golden/sigstore/trust/: ctfe_pubkey.pem  fulcio_root.pem  rekor_public_key.pem
crates/policy/: Cargo.toml  README.md
crates/policy/src/: lib.rs
crates/policy/tests/: baseline.rs  governance_baseline_red.rs  governance_observability_red.rs  priority.rs  redaction.rs  validation.rs
crates/replay-cli/: Cargo.toml
crates/replay-cli/src/: main.rs
crates/telemetry/: Cargo.toml  README.md
crates/telemetry/examples/: blob_otlp.rs
crates/telemetry/src/: blob_observer.rs  lib.rs  policy_observer.rs
crates/telemetry/tests/: blob_observer_integration.rs  blob_observer_properties.rs
scripts/sigstore_fixture_generator/: Cargo.toml
scripts/sigstore_fixture_generator/src/: main.rs
tests/: budget_enforcement.rs  orchestrator_integration.rs
