[package]
name = "blob_store"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "blob_store"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"
aes-gcm = "0.10"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"
rand = "0.8"
tempfile = "3.10"
