[package]
name = "event-log"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Write-ahead event log interfaces and prototype"

[lib]
path = "src/lib.rs"

[dependencies]
orca-core = { path = "../orca-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "append"
harness = false
