[package]
name = "orca-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ORCA core primitives and types"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
jsonschema = "0.17"
once_cell = "1"
