[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deterministic orchestrator state machine"

[lib]
path = "src/lib.rs"

[dependencies]
orca-core = { path = "../orca-core" }
event-log = { path = "../event-log" }
policy = { path = "../policy" }
budget = { path = "../budget" }
telemetry = { path = "../telemetry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync"] }
tokio-stream = "0.1"
tower = "0.4"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
dashmap = "5"
rustls-pemfile = "1"
casbin = { version = "2", default-features = false, features = ["runtime-tokio"] }

[features]
otel = ["telemetry/otel"]

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
tempfile = "3"
tokio-stream = "0.1"
futures-util = "0.3"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "submit"
harness = false
