[package]
name = "plugin_host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
hex = "0.4"
pollster = "0.4.0"
sha2 = "0.10"
sigstore = "0.13.0"
thiserror = "2.0.17"
wasmtime = "24.0.4"
wasmtime-wasi = "24.0.4"


[features]
default = []
hostcalls = []

[lints]
workspace = true

[dev-dependencies]
wat = "1.207.0"
