[package]
name = "policy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Policy engine interfaces (content/tool guardrails)"

[lib]
path = "src/lib.rs"

[dependencies]
orca-core = { path = "../orca-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
serde_yaml = "0.9"
