[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Telemetry (OTel) integration stubs and span helpers"

[lib]
path = "src/lib.rs"

[dependencies]
orca-core = { path = "../orca-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "1"

# Optional OpenTelemetry integration (enable via feature: otel)
opentelemetry = { version = "0.22", optional = true }
opentelemetry_sdk = { version = "0.22", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", optional = true, features = ["http-proto", "metrics"] }
once_cell = { version = "1", optional = true }
blob_store = { path = "../blob_store", optional = true }

[features]
# JSON logging is always on; enable "otel" to wire OTel metrics/tracer providers (no tracing layer hookup yet).
otel = [
  "opentelemetry",
  "opentelemetry_sdk",
  "opentelemetry-otlp",
  "once_cell",
  "blob_store",
]


[dev-dependencies]
proptest = "1.4"
