[package]
name = "sigstore_fixture_generator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
const-oid = "0.9"
der = "0.7"
ecdsa = "0.16"
hex = "0.4"
p256 = "0.13"
pem = "3"
rand = "0.8"
rcgen = "0.12"
rustls-pki-types = "1"
serde_json = "1"
sha2 = "0.10"
signature = "2"
sigstore = "0.13.0"
spki = "0.7"
tls_codec = "0.4"
x509-cert = "0.2"

[lints]
workspace = true
